--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,8 @@ h3 {
 
 .App {
   text-align: center;
+  margin-bottom: 30px;
+  font-family: "Gentium Book Basic", serif;
 }
 
 .App-headings {
@@ -22,4 +24,32 @@ h3 {
   height: 150px;
   padding: 20px;
   color: white;
+}
+
+.nav-links {
+  list-style: none;
+  padding-left: 0;
+}
+
+.nav-links li {
+  display: inline-block;
+  padding: 0 15px;
+}
+
+.nav-links a {
+  color: #02b1ff;
+  text-decoration: none;
+  font-size: 25px;
+}
+
+.nav-links a.active {
+  color: #F79824;
+}
+
+.nav-links a.active:hover {
+  color: #FDCA40;
+}
+
+.nav-links a:hover {
+  color: #0184be;
 }
